--- a/app/src/main/res/layout/activity_passenger_main.xml
+++ b/app/src/main/res/layout/activity_passenger_main.xml
@@ -1,120 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PassengerMainActivity">
-
+    android:orientation="vertical">
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        android:layout_height="wrap_content">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbarPassengerMain"
-            android:layout_width="407dp"
-            android:layout_height="74dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="1dp"
-            android:background="@color/purple_200"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black"
+            >
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ImageView
-        android:id="@+id/mapMockUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/appBar"
-        android:src="@drawable/citymap" />
-
-    <TextView
-        android:id="@+id/reportdriver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mapMockUp"
-        android:text="@string/driver_is_inconsistent_report_him"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/purple_700"
-        android:layout_marginBottom="15dp"/>
-
-    <TextView
-        android:id="@+id/selecteddriver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/reportdriver"
-        android:text="@string/driver_full_name"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/rideprice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/price_price2"
-        android:layout_below="@id/selecteddriver"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/rideduration"
-        android:layout_below="@id/rideprice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/duration_duration2"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/relation_a_to_b2"
-        android:id="@+id/relation"
-        android:layout_below="@id/rideduration"
-        android:layout_centerHorizontal="true"
-        />
-
-    <Button
-        android:id="@+id/panicButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/reportdriver"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/panic"
-        android:textStyle="bold"
-        android:layout_marginTop="100dp"
-        />
-
-    <Button
-        android:id="@+id/buttonInbox"
-        android:layout_width="132dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/inbox"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="TextContrastCheck" />
-
-    <Button
-        android:id="@+id/buttonAccount"
-        android:layout_width="132dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonInbox"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TextContrastCheck" />
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
-</RelativeLayout>
+        <!-- The main content view -->
+        <RelativeLayout
+            android:id="@+id/mainContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"/>
+
+
+
+
+
+        <!-- The navigation drawer -->
+
+        <RelativeLayout
+
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:id="@+id/drawerPane"
+            android:layout_gravity="start"
+            >
+
+            <RelativeLayout
+
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:id="@+id/profileBox"
+                android:layout_height="100sp">
+                <RelativeLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="20sp">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profileIcon"
+                        android:layout_width="50sp"
+                        android:layout_height="50sp"
+                        android:src="@drawable/fade_background"
+                        />
+
+                    <TextView
+                        android:id="@+id/passengerInfoTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:singleLine="true"
+                        android:textStyle="bold"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20sp"
+                        android:textSize="18sp"
+                        android:layout_toEndOf="@id/profileIcon"
+                        />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <ListView
+                android:id="@+id/navList"
+                android:layout_width="280dp"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/profileBox"
+                android:choiceMode="singleChoice"
+                android:background="@color/off_white"/>
+
+        </RelativeLayout>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+
+</LinearLayout>
